# randd-goals

./: .gitignore  .pre-commit-config.yaml  .spelling-wordlist.txt  Cargo.toml  README.md
.vim/: coc-settings.json
src/: config.rs  error.rs  goal.rs  lib.rs  main.rs  picker.rs  state.rs  task.rs  util.rs
src/commands/: completion.rs  mod.rs  tasks.rs  today.rs
src/commands/tasks/: mod.rs  steps.rs
src/files/: config.rs  mod.rs  state.rs
src/serializers/: once_cell.rs
src/task/: config.rs  mod.rs  set.rs  state.rs
