[package]
name = "randd-goals"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.1.12"
clap = { version = "4.5.46", features = ["derive", "unicode", "wrap_help", "cargo", "unstable-doc"] }
clap_complete = { version = "4.5.57", features = ["unstable-doc"] }
color-eyre = { version = "0.6.5", features = ["color-spantrace", "tracing-error"] }
derive_builder = { version = "0.20.2", features = ["clippy"] }
dirs = "6.0.0"
lazy_static = "1.5.0"
notify = { version = "8.2.0", features = ["serde"] }
paste = "1.0.15"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde-jsonlines = "0.7.0"
serde_path_to_error = "0.1.17"
serde_yml = "0.0.12"
slug = "0.1.6"
snafu = { version = "0.8.8", default-features = false, features = ["std", "rust_1_81", "guide", "backtrace", "futures"] }
time = { version = "0.3.42", features = ["macros", "serde-human-readable", "rand"] }

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_macros = "allow"
unused_mut = "allow"
unused_variables = "allow"
