[package]
name = "randd-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
backtrace = "0.3.75"
camino = "1.1.12"
clap = { version = "4.5.47", features = ["derive", "unicode", "wrap_help", "cargo", "unstable-doc", "unstable-ext"] }
clap_complete = { version = "4.5.57", features = ["unstable-doc", "unstable-dynamic"] }
cli-table = "0.5.0"
color-backtrace = "0.7.1"
csv = "1.3.1"
derive_builder = { version = "0.20.2", features = ["clippy"] }
dirs = "6.0.0"
dotenv = "0.15.0"
file-rotate = "0.8.0"
getset = "0.1.6"
lazy_static = "1.5.0"
log = { version = "0.4.28", features = ["std"] }
notify-rust = { version = "4.11.7" }
paste = "1.0.15"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-jsonlines = "0.7.0"
serde_path_to_error = "0.1.17"
serde_yml = "0.0.12"
slug = "0.1.6"
snafu = { version = "0.8.9", default-features = false, features = ["std", "rust_1_81", "guide", "backtrace", "futures", "backtraces-impl-backtrace-crate"] }
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.43", features = ["macros", "serde-human-readable", "local-offset", "formatting"] }

[dev-dependencies]
drop_bomb = "0.1.5"
mockall = "0.13.1"
pretty_assertions = "1.4.1"

#[features]
#notifications = ["dep:notify-rust"]

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_macros = "allow"
unused_mut = "allow"
unused_variables = "allow"
